# feishu-super-skills

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
scripts/: feishu.sh
skills/feishu-bitable/: SKILL.md
skills/feishu-bitable-query/: SKILL.md
skills/feishu-bitable/references/: field-types.md  openapi-endpoints.md  search-filter.md
src/feishu_super/: __init__.py  __main__.py  cli.py  client.py  config.py  date_range.py  expand.py  field_types.py  formatters.py  guard.py  schema.py  token_cache.py  where_dsl.py
src/feishu_super/commands/: _common.py  fields.py  records.py  tables.py
tests/: PERF_BASELINE.md  perf_concurrent_expand.py  perf_low_freq.py  perf_pagesize_concurrency.py  test_client_concurrency.py  test_config.py  test_date_range.py  test_expand.py  test_expand_concurrent.py  test_field_types.py  test_fuzzy.py  test_guard.py  test_paginate.py  test_records_cli.py  test_token_cache.py  test_where_dsl.py  test_where_dsl_types.py
